sf-hrms/force-app/main/default/objects/Employee_Document__c/Employee_Document__c.object-meta.xml
<CustomObject>
    <label>Employee Document</label>
    <nameField>
        <label>Doc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>