sf-hrms/force-app/main/default/objects/Employee_Document__c/fields/Document_Name__c.field-meta.xml
<CustomField><fullName>Document_Name__c</fullName><label>Document Name</label><type>Text</type><length>255</length></CustomField>