sf-hrms/force-app/main/default/objects/Employee_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField><fullName>Document_Type__c</fullName><label>Document Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Offer Letter</fullName><default>false</default></value><value><fullName>PAN Card</fullName><default>false</default></value><value><fullName>Aadhaar</fullName><default>false</default></value><value><fullName>Bank Proof</fullName><default>false</default></value><value><fullName>Education</fullName><default>false</default></value><value><fullName>Experience</fullName><default>false</default></value><value><fullName>Other</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>