sf-hrms/force-app/main/default/objects/Employee_Document__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>MasterDetail</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Documents</relationshipLabel><relationshipName>Documents</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>