sf-hrms/force-app/main/default/objects/Employee_Document__c/fields/Expiry_Date__c.field-meta.xml
<CustomField><fullName>Expiry_Date__c</fullName><label>Expiry Date</label><type>Date</type></CustomField>