sf-hrms/force-app/main/default/objects/Employee_Document__c/fields/Verified_By__c.field-meta.xml
<CustomField><fullName>Verified_By__c</fullName><label>Verified By</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Verified Documents</relationshipLabel><relationshipName>Verified_Documents</relationshipName></CustomField>